CRUD PRODUCTOS Multi Languaje Hibernate

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,9 @@ spring.datasource.password=admin
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto= update
+
+#Set UTF-8
+spring.banner.charset=utf-8
+spring.messages.encoding=UTF-8
+server.tomcat.uri-encoding=UTF-8
+spring.thymeleaf.encoding=UTF-8
