--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,6 @@ spring.banner.charset=utf-8
 spring.messages.encoding=UTF-8
 server.tomcat.uri-encoding=UTF-8
 spring.thymeleaf.encoding=UTF-8
+
+#Internationalization
+spring.messages.basename=/resources/messages
