--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=PrograIVProyectoI
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/prograivproyectoi
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=admin
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto= update
